# fuxxing-fuzzing

./: .gitmodules  README.md
ABHD/: README.md
ABHD/VLC-0.9.4/vlc_fuzzer/: Cargo.toml
DBMS/: README.md  install.sh  mutated.txt  run.sh  setup.sh  testcase.txt
DBMS/gramfree/: Cargo.toml
DBMS/gramfree/src/: impls.rs  lib.rs  types.rs
DBMS/input/: 2.sql  3.sql  4.sql
DBMS/input/memcached/: 1  2  3  4
DBMS/input/postgresql/: 1.sql
DBMS/input/redis/: 1  10  11  12  13  14  15  2  3  4  5  6  7  8  9
DBMS/output/default/: .cur_input  cmdline  fuzzer_setup
DBMS/output/postgresql/default/: .cur_input  fuzz_bitmap  fuzzer_setup  fuzzer_stats
DBMS/src/: go.mod  main.go
DBMS/src/afl/: afl.go  afl.h
DBMS/src/afl-custom/: custom.go
DBMS/src/db/: memcached.go  postgresql.go  redis.go
DBMS/src/gramfree/: client.go  graph.go  mutator.go
DBMS/src/test/: README.md  ir.cpp  mutator.c  run.sh  server  server.c  test  test.c
DBMS/src/test/output/default/: .cur_input  fuzzer_setup  (+1 more)
File/: CMakeLists.txt  README.md
File/generator/: CMakeLists.txt  generator.h  generator.hpp  ir.hpp  pdf_generator.cpp
File/generator/g4/: pdf_lexer.g4
File/generator/listener/: listener.hpp  pdf_listener.hpp
File/generator/pdf/: pdf_listener.cpp
File/generator/pdf/g4/: pdf_lexer.g4  pdf_parser.g4
File/generator/pdf/include/: PDFLexerBase.h  PDFParserBase.h  pdf_listener.h
File/mutator/: afl_custom.cpp  mutator.cpp  mutator.h  mutator.hpp
File/parser/: parser.cpp
File/parser/pdf/: lexer.g4  parser.g4
File/parser/pdf/g4/: pdf_parser.g4
PISS/: README.md
(+1 files in other folders)
